force-app/main/default/objects/Budget__c/fields/Active_Schemes__c.field-meta.xml
<CustomField>
    <fullName>Active_Schemes__c</fullName>
    <label>Active Schemes</label>
    <summaryFilterItems>
        <field>Scheme__c.Status__c</field>
        <operation>equals</operation>
        <value>Running</value>
    </summaryFilterItems>
    <summaryForeignKey>Scheme__c.Budget__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>