force-app/main/default/objects/Budget__c/fields/Budget_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Budget_Allocated__c</fullName>
    <label>Budget Allocated</label>
    <summarizedField>Scheme__c.Required_Budget__c</summarizedField>
    <summaryForeignKey>Scheme__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>