force-app/main/default/objects/Budget__c/fields/Budget_Available__c.field-meta.xml
<CustomField>
    <fullName>Budget_Available__c</fullName>
    <formula>Total_Yearly_Budget__c - ( Budget_Utilized__c +  Budget_Allocated__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>