force-app/main/default/objects/Budget__c/fields/Budget_Utilized__c.field-meta.xml
<CustomField>
    <fullName>Budget_Utilized__c</fullName>
    <label>Budget Incentivized</label>
    <summarizedField>Scheme__c.Budget_Incentivized__c</summarizedField>
    <summaryForeignKey>Scheme__c.Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>