force-app/main/default/objects/Budget__c/fields/Total_Yearly_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Yearly_Budget__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Yearly Budget</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>