force-app/main/default/objects/Budget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Yearly_Budget__c</columns>
    <columns>Budget_Allocated__c</columns>
    <columns>Budget_Utilized__c</columns>
    <columns>Budget_Available__c</columns>
    <columns>Active_Schemes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>